# KernelMain

./: .gitignore  CMakeLists.txt
configuration/grub/boot/grub/: grub.cfg
src/amd64/asm/: main64.asm
src/amd64/clanguages/: main.c
src/i386/asm/: biosfunctions.asm  main.asm
src/i386/clanguages/: biosfunctions.h  main.c
